# envs-manager

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/: tests.yml
.github/workflows/: black.yml  linux-tests.yml  macos-tests.yml  pre-commit.yml  tests.yml  windows-tests.yml
env_manager/: __about__.py  api.py  cli.py  manager.py
env_manager/backends/: __init__.py  conda_like_interface.py  mamba_interface.py  micromamba_interface.py  venv_interface.py
env_manager/tests/: test_cli.py  test_manager.py
env_manager/tests/env_files/conda-like-files/: linux_conda_export_env.yml  macos_conda_export_env.yml  macos_conda_import_env.yml  win_conda_export_env.yml  win_conda_import_env.yml
env_manager/tests/env_files/venv-files/: venv_export_env.txt  venv_import_env.txt
envs_manager/: __about__.py  __init__.py  api.py  cli.py  jupyter.py  manager.py
envs_manager/backends/: api.py  conda_like_interface.py  pixi_interface.py  venv_interface.py
envs_manager/tests/: __init__.py  test_cli.py  test_manager.py
envs_manager/tests/env_files/conda-like-files/: linux_conda_export_env.yml  linux_conda_import_env.yml  macos_conda_export_env.yml  win_conda_export_env.yml
envs_manager/tests/env_files/venv-files/: venv_export_env.txt
jupyter-config/: envs_manager.json
requirements/: environment.yml
